# audit-stream-prometheus

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/audit_stream_prometheus/: __init__.py  __main__.py  app.py  bridge.py  metrics.py
tests/: test_app.py  test_bridge.py
