[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "audit-stream-prometheus"
version = "0.1.0"
description = "Subscribe to audit-stream-py's SSE feed and re-expose every governance event as a Prometheus counter. The other half of the audit-stream spine — producers fan IN, this fans OUT to observability."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Miz Causevic", email = "miz@kineticgain.com" },
]
keywords = [
    "audit-stream", "prometheus", "sse", "governance", "ai-governance",
    "kinetic-gain-protocol-suite", "observability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "prometheus-client>=0.20",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
audit-stream-prometheus = "audit_stream_prometheus.__main__:main"

[project.urls]
Homepage      = "https://github.com/mizcausevic-dev/audit-stream-prometheus"
Repository    = "https://github.com/mizcausevic-dev/audit-stream-prometheus"
Issues        = "https://github.com/mizcausevic-dev/audit-stream-prometheus/issues"
"audit-stream-py" = "https://github.com/mizcausevic-dev/audit-stream-py"
"Author Site" = "https://kineticgain.com/"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_stream_prometheus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:starlette.*",
    "ignore::DeprecationWarning:fastapi.*",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = false
